--- a/BlazorSignalRBelgianCavesRegister/Client/Pages/Bibliographies/BibliographyCreate.razor
+++ b/BlazorSignalRBelgianCavesRegister/Client/Pages/Bibliographies/BibliographyCreate.razor
@@ -21,6 +21,10 @@
         <label>Details : </label>
         <InputText @bind-Value="bibliographyform.Detail"></InputText>
     </div>
+    <div class="form-control-sm">
+        <label>Id Site : </label>
+        <InputNumber @bind-Value="bibliographyform.Site_Id"></InputNumber>
+    </div>
     <button type="submit" button="btn btn-success">Submit</button>
 </EditForm>
 
