--- a/BlazorSignalRBelgianCavesRegister/Client/Pages/Bibliographies/BibliographyDetail.razor
+++ b/BlazorSignalRBelgianCavesRegister/Client/Pages/Bibliographies/BibliographyDetail.razor
@@ -7,6 +7,7 @@
     <p>ISBN : @CurrentBibliography.ISBN</p>
     <p>DataType : @CurrentBibliography.DataType</p>
     <p>Detail : @CurrentBibliography.Detail</p>
+    <p>Id Site : @CurrentBibliography.Site_Id</p>
 }
 
 @code {
