--- a/BlazorSignalRBelgianCavesRegister/Client/Pages/Chat.razor.css
+++ b/BlazorSignalRBelgianCavesRegister/Client/Pages/Chat.razor.css
@@ -1,1 +1,6 @@
-﻿
+﻿/*@import url('c:\users\pol pc\downloads\belgianscavesregister ubs 0.1( maison version 4)\blazorsignalrbelgiancavesregister\blazorsignalrbelgiancavesregister\client\pages\chats\chatview.razor.css');
+li {
+    background-color: orangered;
+    position: relative;
+}
+*/
