--- a/BlazorSignalRBelgianCavesRegister/Client/Pages/LambdaDatas/LambdaDataCreate.razor
+++ b/BlazorSignalRBelgianCavesRegister/Client/Pages/LambdaDatas/LambdaDataCreate.razor
@@ -25,6 +25,10 @@
         <label>Description : </label>
         <InputText @bind-Value="lambdaDataform.Description"></InputText>
     </div>
+    <div class="form-control-sm">
+        <label>Id Site : </label>
+        <InputNumber @bind-Value="lambdaDataform.Site_Id"></InputNumber>
+    </div>
     <button type="submit" button="btn btn-success">Submit</button>
 </EditForm>
 
