--- a/BlazorSignalRBelgianCavesRegister/Client/Pages/NOwners/NOwnerCreate.razor
+++ b/BlazorSignalRBelgianCavesRegister/Client/Pages/NOwners/NOwnerCreate.razor
@@ -8,6 +8,10 @@
         <label>Agreement : </label>
         <InputText @bind-Value="nownerform.Agreement"></InputText>
     </div>
+    <div class="form-control-sm">
+        <label>Id Site : </label>
+        <InputNumber @bind-Value="nownerform.Site_Id"></InputNumber>
+    </div>
     <button type="submit" button="btn btn-success">Submit</button>
 </EditForm>
 
