--- a/BlazorSignalRBelgianCavesRegister/Client/Pages/NOwners/NOwnerDetail.razor
+++ b/BlazorSignalRBelgianCavesRegister/Client/Pages/NOwners/NOwnerDetail.razor
@@ -4,6 +4,7 @@
 {
     <p>Status : @CurrentNOwner.Status</p>
     <p>Agreement : @CurrentNOwner.Agreement</p>
+    <p>Id Site : @CurrentNOwner.Site_Id</p>
 }
 
 @code {
