--- a/BlazorSignalRBelgianCavesRegister/Client/Pages/ScientificDatas/ScientificDataCreate.razor
+++ b/BlazorSignalRBelgianCavesRegister/Client/Pages/ScientificDatas/ScientificDataCreate.razor
@@ -12,6 +12,10 @@
         <label>Data Reference : </label>
         <InputText @bind-Value="scientificDataform.ReferenceData"></InputText>
     </div>
+    <div class="form-control-sm">
+        <label>Id Site : </label>
+        <InputNumber @bind-Value="scientificDataform.Site_Id"></InputNumber>
+    </div>
     <button type="submit" button="btn btn-success">Submit</button>
 </EditForm>
 
