--- a/BlazorSignalRBelgianCavesRegister/Client/Pages/ScientificDatas/ScientificDataDetail.razor
+++ b/BlazorSignalRBelgianCavesRegister/Client/Pages/ScientificDatas/ScientificDataDetail.razor
@@ -5,6 +5,7 @@
     <p>Data Type : @CurrentScientificData.DataType</p>
     <p>Data Details : @CurrentScientificData.DetailsData</p>
     <p>Data Reference : @CurrentScientificData.ReferenceData</p>
+    <p>Id Site : @CurrentScientificData.Site_Id</p>
 }
 
 @code {
