--- a/BlazorSignalRBelgianCavesRegister/Client/Pages/LambdaDatas/LambdaDataDetail.razor
+++ b/BlazorSignalRBelgianCavesRegister/Client/Pages/LambdaDatas/LambdaDataDetail.razor
@@ -8,6 +8,7 @@
     <p>EquipementSheet : @CurrentLambdaData.EquipementSheet</p>
     <p>PracticalInformation : @CurrentLambdaData.PracticalInformation</p>
     <p>Description : @CurrentLambdaData.Description</p>
+    <p>Id Site : @CurrentLambdaData.Site_Id</p>
 }
 
 @code {
