--- a/BlazorSignalRBelgianCavesRegister/Client/Shared/NavMenu.razor
+++ b/BlazorSignalRBelgianCavesRegister/Client/Shared/NavMenu.razor
@@ -40,11 +40,6 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="nuser">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Users
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
             <NavLink class="nav-link" href="scientificdata">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Scientific Datas
             </NavLink>
@@ -55,13 +50,13 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="cavequestionner">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Caves Questionner
+            <NavLink class="nav-link" href="weatherforecast">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Weather Forecasts
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weatherforecast">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Weather Forecasts
+            <NavLink class="nav-link" href="cavequestionner">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Caves Questionner
             </NavLink>
         </div>
         <div class="nav-item px-3">
@@ -74,8 +69,35 @@
                 <span class="oi oi-plus" aria-hidden="true"></span> Counter
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="nuser">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Register
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="nuser">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Login
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="chat">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Eventual Comments
+            </NavLink>
+        </div>
     </nav>
+    <div class="conteneur">
+        <div class="box">🐸 Élément 1</div>
+        <div class="box">🦊 Élément 2</div>
+        <div class="box">🦄 Élément 3</div>
+        <div class="box">🐶 Élément 4</div>
+        <div class="box">🐨 Élément 5</div>
+        <div class="box">🐒 Élément 6</div>
+        <div class="box">🦆 Élément 7</div>
+        <div class="box">🐙 Élément 8</div>
+        <div class="box">🐋 Élément 9</div>
+    </div>
 </div>
+
 
 @code {
     private bool collapseNavMenu = true;
