Application frontend Blazor permettant de consulter la base de données sur les cavités tout en pouvant y consulter également les donnée lambdas, les données sur les propriétaires, les données scientifiques, les différentes bibliographies et les commentaires s'y référents. Tout en ayant la possibilité de  laisser un commentaire.
Reste juste le problème de enregistrement utilisateur et les problèmesde CSS générant des problèmes d'acceptation avec les navigateurs

--- a/BlazorSignalRBelgianCavesRegister/Client/Pages/Chats/ChatDetail.razor
+++ b/BlazorSignalRBelgianCavesRegister/Client/Pages/Chats/ChatDetail.razor
@@ -4,7 +4,7 @@
 {
     <p>Content : @CurrentChat.Content</p>
     <p>Author : @CurrentChat.Author</p>
-    <p>Site_Id : @CurrentChat.Site_Id</p>
+    <p>Site Id : @CurrentChat.Site_Id</p>
 }
 
 @code {
