--- a/BlazorSignalRBelgianCavesRegister/Client/Pages/NOwners/NOwnerDetail.razor
+++ b/BlazorSignalRBelgianCavesRegister/Client/Pages/NOwners/NOwnerDetail.razor
@@ -4,7 +4,8 @@
 {
     <p>Status : @CurrentNOwner.Status</p>
     <p>Agreement : @CurrentNOwner.Agreement</p>
-    <p>Id Site : @CurrentNOwner.Site_Id</p>
+    <p>Person Id : @CurrentNOwner.NPerson_Id</p>
+    <p>Site Id : @CurrentNOwner.Site_Id</p>
 }
 
 @code {
