--- a/BlazorSignalRBelgianCavesRegister/Client/Shared/NavMenu.razor
+++ b/BlazorSignalRBelgianCavesRegister/Client/Shared/NavMenu.razor
@@ -15,11 +15,6 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="chat">
-                <span class="oi oi-plus" aria-hidden="true"></span> Chat
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
             <NavLink class="nav-link" href="bibliography">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Bibliography
             </NavLink>
@@ -82,6 +77,11 @@
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="chat">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Eventual Comments
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="chatcomment">
+                <span class="oi oi-plus" aria-hidden="true"></span> Chat
             </NavLink>
         </div>
     </nav>
